ocaml/testsuite/tests/typing-layouts-bits32/unboxed_bits32s_disabled.compilers.reference
File "unboxed_bits32s.ml", line 186, characters 11-17:
186 | type ('a : bits32) t_bits32 = 'a
                 ^^^^^^
Error: Layout bits32 is more experimental than allowed by the enabled layouts extension.
       You must enable -extension layouts_beta to use this feature.
